/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package co.edu.unicolombo.pb.proaula.Constants;

/**
 *
 * @author Usuario
 */
public enum EstadoPedido {
    RECIBIDO, 
    PREPARANDO, 
    LISTO, 
    ENTREGADO
}
