/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package co.edu.unicolombo.pb.proaula.conceptos;

/**
 *
 * @author Usuario
 */
public class Producto {
    public  String nombre;
    public  String[] ingredientes;
    public  float precio=0;

    public String getNombre() {
        return nombre;
    }
    
}
