/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package co.edu.unicolombo.pb.proaula.conceptos;

import java.util.Date;
import java.util.HashMap;


/**
 *
 * @author Usuario
 */
public class Venta {
    public Cliente cliente;
    public Date fecha;
    public HashMap<String, ItemPedido> itemsVenta;
    
}
